[gd_scene load_steps=28 format=3 uid="uid://cskn7ay35s5c4"]

[ext_resource type="Script" path="res://game/game.gd" id="1_mut44"]
[ext_resource type="Script" path="res://player/player.gd" id="2_nox8s"]
[ext_resource type="Script" path="res://player/camera_3d.gd" id="2_s41xm"]
[ext_resource type="Script" path="res://room/room.gd" id="3_3oh60"]
[ext_resource type="PackedScene" uid="uid://dlpyhx5xkt2mo" path="res://level/przedmioty/cz_smak.blend" id="3_ybcfq"]
[ext_resource type="PackedScene" uid="uid://5otiaekn0mr" path="res://player/hand/hand.glb" id="4_n0qlv"]
[ext_resource type="PackedScene" uid="uid://1mdfqqqf0ev4" path="res://level/przedmioty/c_baza.blend" id="4_xdmhe"]
[ext_resource type="PackedScene" uid="uid://e24nibx5r303" path="res://player/hand-hamster/hand-hamster.glb" id="5_i8408"]
[ext_resource type="PackedScene" uid="uid://dt08dx5qq0htl" path="res://level/przedmioty/kolo.blend" id="5_oftn8"]
[ext_resource type="PackedScene" uid="uid://6gn7eh8nxhjw" path="res://level/przedmioty/kubki.blend" id="6_rdf3r"]
[ext_resource type="PackedScene" uid="uid://ci1q7yemudxp3" path="res://level/przedmioty/lod.blend" id="7_rmppl"]
[ext_resource type="PackedScene" uid="uid://t2duaaa5wfie" path="res://level/przedmioty/mozdzierz.blend" id="8_4au0y"]
[ext_resource type="PackedScene" uid="uid://dckpvyrr7v28y" path="res://level/przedmioty/m_baza.blend" id="9_wkucw"]
[ext_resource type="PackedScene" uid="uid://boybyh8kjjoug" path="res://level/przedmioty/n_smak.blend" id="10_qdx5j"]
[ext_resource type="PackedScene" uid="uid://d0x36b11s7w84" path="res://level/przedmioty/smietnik.blend" id="11_phkis"]
[ext_resource type="PackedScene" uid="uid://c037jlii4udrv" path="res://level/przedmioty/zgrzewarka.blend" id="12_8mgey"]
[ext_resource type="PackedScene" uid="uid://p8g3tim6rohx" path="res://level/przedmioty/z_baza.blend" id="13_ftyby"]
[ext_resource type="PackedScene" uid="uid://c0twx7njgeuby" path="res://level/przedmioty/z_smak.blend" id="14_gv8aj"]
[ext_resource type="PackedScene" uid="uid://btlpfefwnb6kp" path="res://level/sklep/bar.blend" id="15_8014d"]
[ext_resource type="PackedScene" uid="uid://ci5rg3xtfcecm" path="res://level/sklep/lada.blend" id="16_wan7r"]
[ext_resource type="PackedScene" uid="uid://cjyqp8b76bu53" path="res://level/sklep/sciany.blend" id="17_nkmt6"]
[ext_resource type="Script" path="res://client_spawn/client_spawn.gd" id="19_6dlb4"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_2ac66"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_2geqy"]
sky_material = SubResource("ProceduralSkyMaterial_2ac66")

[sub_resource type="Environment" id="Environment_4ycvo"]
background_mode = 2
sky = SubResource("Sky_2geqy")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_qrqfl"]

[sub_resource type="LabelSettings" id="LabelSettings_0m1y1"]
font_size = 80
font_color = Color(0.186609, 0, 0.978389, 1)

[node name="Game" type="Node3D"]
script = ExtResource("1_mut44")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4ycvo")

[node name="Player" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-4.31403e-08, -0.161122, 0.986935, -7.04285e-09, 0.986935, 0.161122, -1, 0, -4.37114e-08, 3.09197, 1.58222, 0)
script = ExtResource("2_nox8s")

[node name="PlayerCamera" type="Camera3D" parent="Player"]
unique_name_in_owner = true
current = true
script = ExtResource("2_s41xm")

[node name="RayCast3D" type="RayCast3D" parent="Player/PlayerCamera"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -100, 0)
collision_mask = 2

[node name="Crosshair" type="Sprite3D" parent="Player/PlayerCamera"]
transform = Transform3D(1, 0, 0, 0, 1, -2.98023e-08, 0, 2.98023e-08, 1, -2.09548e-08, 0, -0.527056)
texture = SubResource("PlaceholderTexture2D_qrqfl")

[node name="hand" parent="Player/PlayerCamera" instance=ExtResource("4_n0qlv")]
transform = Transform3D(-1, 3.55274e-15, -1.50996e-07, -1.77636e-15, 1, 3.11283e-21, 1.50996e-07, -5.82352e-22, -1, 0.133235, -0.053552, -0.122779)

[node name="hand-hamster" parent="Player/PlayerCamera" instance=ExtResource("5_i8408")]
transform = Transform3D(1, 1.7349e-14, -2.4869e-14, 4.44091e-16, 1, 1.49012e-08, 0, -1.49012e-08, 1, 0.083, -0.02, -0.383)
visible = false

[node name="Control" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TotalPoints" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 21.0
offset_top = 20.0
offset_right = 201.0
offset_bottom = 89.0
text = "POINTS"
label_settings = SubResource("LabelSettings_0m1y1")

[node name="RoomInteractable" type="Node3D" parent="."]
script = ExtResource("3_3oh60")

[node name="cz_smak" parent="RoomInteractable" instance=ExtResource("3_ybcfq")]

[node name="c_baza" parent="RoomInteractable" instance=ExtResource("4_xdmhe")]

[node name="kolo" parent="RoomInteractable" instance=ExtResource("5_oftn8")]

[node name="StaticBody3D" parent="RoomInteractable/kolo/kolo" index="0" groups=["kulki"]]

[node name="kubki" parent="RoomInteractable" instance=ExtResource("6_rdf3r")]

[node name="lod" parent="RoomInteractable" instance=ExtResource("7_rmppl")]

[node name="mozdzierz" parent="RoomInteractable" instance=ExtResource("8_4au0y")]

[node name="m_baza" parent="RoomInteractable" instance=ExtResource("9_wkucw")]

[node name="n_smak" parent="RoomInteractable" instance=ExtResource("10_qdx5j")]

[node name="smietnik" parent="RoomInteractable" instance=ExtResource("11_phkis")]

[node name="zgrzewarka" parent="RoomInteractable" instance=ExtResource("12_8mgey")]

[node name="z_baza" parent="RoomInteractable" instance=ExtResource("13_ftyby")]

[node name="z_smak" parent="RoomInteractable" instance=ExtResource("14_gv8aj")]

[node name="RoomDesign" type="Node3D" parent="."]

[node name="bar" parent="RoomDesign" instance=ExtResource("15_8014d")]

[node name="lada" parent="RoomDesign" instance=ExtResource("16_wan7r")]

[node name="sciany" parent="RoomDesign" instance=ExtResource("17_nkmt6")]

[node name="ClientSpawn" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 1.03009, 0)
script = ExtResource("19_6dlb4")

[node name="Spot1" type="Marker3D" parent="ClientSpawn"]

[node name="Spot2" type="Marker3D" parent="ClientSpawn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="Spot3" type="Marker3D" parent="ClientSpawn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.17204, 2.64406, 0)

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.77715, 2.64406, 0)

[editable path="RoomInteractable/kolo"]
